--- a/.gitignore
+++ b/.gitignore
@@ -313,6 +313,7 @@ cython_debug/
 .history
 .ionide
 
-# Support for Project snippet scope
-
-# End of https://www.toptal.com/developers/gitignore/api/python,pythonvanilla,visualstudiocode,pydev,pycharm
+### brownie
+.history
+.hypothesis/
+reports/
